final final changes

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -231,162 +231,7 @@
      "output_type": "stream",
      "text": [
       "Processing file: m00002.wav\n",
-      "Processing file: m00039.wav\n",
-      "Processing file: m00041.wav\n",
-      "Processing file: m00072.wav\n",
-      "Processing file: m00096.wav\n",
-      "Processing file: m00102.wav\n",
-      "Processing file: m00112.wav\n",
-      "Processing file: m00138.wav\n",
-      "Processing file: m00192.wav\n",
-      "Processing file: m00206.wav\n",
-      "Processing file: m00230.wav\n",
-      "Processing file: m00236.wav\n",
-      "Processing file: m00248.wav\n",
-      "Processing file: m00253.wav\n",
-      "Processing file: m00298.wav\n",
-      "Processing file: m00313.wav\n",
-      "Processing file: m00338.wav\n",
-      "Processing file: m00339.wav\n",
-      "Processing file: m00351.wav\n",
-      "Processing file: m00400.wav\n",
-      "Processing file: m00421.wav\n",
-      "Processing file: m00429.wav\n",
-      "Processing file: m00435.wav\n",
-      "Processing file: m00454.wav\n",
-      "Processing file: m00477.wav\n",
-      "Processing file: m00501.wav\n",
-      "Processing file: m00503.wav\n",
-      "Processing file: m00513.wav\n",
-      "Processing file: m00553.wav\n",
-      "Processing file: m00606.wav\n",
-      "Processing file: m00623.wav\n",
-      "Processing file: m00627.wav\n",
-      "Processing file: m00629.wav\n",
-      "Processing file: m00633.wav\n",
-      "Processing file: m00637.wav\n",
-      "Processing file: m00658.wav\n",
-      "Processing file: m00671.wav\n",
-      "Processing file: m00676.wav\n",
-      "Processing file: m00677.wav\n",
-      "Processing file: m00678.wav\n",
-      "Processing file: m00716.wav\n",
-      "Processing file: m00762.wav\n",
-      "Processing file: m00772.wav\n",
-      "Processing file: m00773.wav\n",
-      "Processing file: m00801.wav\n",
-      "Processing file: m00821.wav\n",
-      "Processing file: m00850.wav\n",
-      "Processing file: m00867.wav\n",
-      "Processing file: m00895.wav\n",
-      "Processing file: m00996.wav\n",
-      "Features saved to audio_features_labeled.csv\n",
-      "Processing file: m00003.wav\n",
-      "Processing file: m00012.wav\n",
-      "Processing file: m00013.wav\n",
-      "Processing file: m00043.wav\n",
-      "Processing file: m00044.wav\n",
-      "Processing file: m00055.wav\n",
-      "Processing file: m00061.wav\n",
-      "Processing file: m00063.wav\n",
-      "Processing file: m00069.wav\n",
-      "Processing file: m00074.wav\n",
-      "Processing file: m00107.wav\n",
-      "Processing file: m00114.wav\n",
-      "Processing file: m00127.wav\n",
-      "Processing file: m00137.wav\n",
-      "Processing file: m00139.wav\n",
-      "Processing file: m00148.wav\n",
-      "Processing file: m00149.wav\n",
-      "Processing file: m00156.wav\n",
-      "Processing file: m00183.wav\n",
-      "Processing file: m00211.wav\n",
-      "Processing file: m00218.wav\n",
-      "Processing file: m00228.wav\n",
-      "Processing file: m00247.wav\n",
-      "Processing file: m00254.wav\n",
-      "Processing file: m00266.wav\n",
-      "Processing file: m00289.wav\n",
-      "Processing file: m00292.wav\n",
-      "Processing file: m00293.wav\n",
-      "Processing file: m00309.wav\n",
-      "Processing file: m00318.wav\n",
-      "Processing file: m00321.wav\n",
-      "Processing file: m00323.wav\n",
-      "Processing file: m00324.wav\n",
-      "Processing file: m00331.wav\n",
-      "Processing file: m00348.wav\n",
-      "Processing file: m00355.wav\n",
-      "Processing file: m00356.wav\n",
-      "Processing file: m00357.wav\n",
-      "Processing file: m00359.wav\n",
-      "Processing file: m00363.wav\n",
-      "Processing file: m00371.wav\n",
-      "Processing file: m00372.wav\n",
-      "Processing file: m00391.wav\n",
-      "Processing file: m00393.wav\n",
-      "Processing file: m00399.wav\n",
-      "Processing file: m00405.wav\n",
-      "Processing file: m00414.wav\n",
-      "Processing file: m00434.wav\n",
-      "Processing file: m00463.wav\n",
-      "Processing file: m00468.wav\n",
-      "Processing file: m00487.wav\n",
-      "Processing file: m00495.wav\n",
-      "Processing file: m00515.wav\n",
-      "Processing file: m00528.wav\n",
-      "Processing file: m00537.wav\n",
-      "Processing file: m00538.wav\n",
-      "Processing file: m00549.wav\n",
-      "Processing file: m00555.wav\n",
-      "Processing file: m00560.wav\n",
-      "Processing file: m00570.wav\n",
-      "Processing file: m00571.wav\n",
-      "Processing file: m00576.wav\n",
-      "Processing file: m00581.wav\n",
-      "Processing file: m00582.wav\n",
-      "Processing file: m00589.wav\n",
-      "Processing file: m00597.wav\n",
-      "Processing file: m00610.wav\n",
-      "Processing file: m00616.wav\n",
-      "Processing file: m00624.wav\n",
-      "Processing file: m00635.wav\n",
-      "Processing file: m00685.wav\n",
-      "Processing file: m00705.wav\n",
-      "Processing file: m00708.wav\n",
-      "Processing file: m00719.wav\n",
-      "Processing file: m00730.wav\n",
-      "Processing file: m00733.wav\n",
-      "Processing file: m00736.wav\n",
-      "Processing file: m00755.wav\n",
-      "Processing file: m00756.wav\n",
-      "Processing file: m00791.wav\n",
-      "Processing file: m00806.wav\n",
-      "Processing file: m00812.wav\n",
-      "Processing file: m00817.wav\n",
-      "Processing file: m00824.wav\n",
-      "Processing file: m00828.wav\n",
-      "Processing file: m00829.wav\n",
-      "Processing file: m00833.wav\n",
-      "Processing file: m00838.wav\n",
-      "Processing file: m00843.wav\n",
-      "Processing file: m00852.wav\n",
-      "Processing file: m00873.wav\n",
-      "Processing file: m00921.wav\n",
-      "Processing file: m00927.wav\n",
-      "Processing file: m00928.wav\n",
-      "Processing file: m00941.wav\n",
-      "Processing file: m00947.wav\n",
-      "Processing file: m00949.wav\n",
-      "Processing file: m00950.wav\n",
-      "Processing file: m00961.wav\n",
-      "Processing file: m00967.wav\n",
-      "Processing file: m00971.wav\n",
-      "Processing file: m00973.wav\n",
-      "Processing file: m00988.wav\n",
-      "Processing file: m00991.wav\n",
-      "Processing file: m00995.wav\n",
-      "Features saved to audio_features_unlabeled.csv\n"
+      "Processing file: m00039.wav\n"
      ]
     }
    ],
@@ -403,7 +248,7 @@
     "        features['mfcc_mean'] = np.mean(mfccs, axis=1)\n",
     "        features['mfcc_var'] = np.var(mfccs, axis=1)\n",
     "\n",
-    "        # Feature Trajectories\n",
+    "        # MFCC Delta\n",
     "        mfcc_delta = librosa.feature.delta(mfccs)\n",
     "        features['mfcc_delta_mean'] = np.mean(mfcc_delta, axis=1)\n",
     "        features['mfcc_delta_var'] = np.var(mfcc_delta, axis=1)\n",
@@ -440,7 +285,7 @@
     "        # Time-Domain Features\n",
     "        features['rms_mean'] = np.mean(librosa.feature.rms(y=y))\n",
     "        features['rms_var'] = np.var(librosa.feature.rms(y=y))\n",
-    "        features['energy'] = np.sum(y ** 2) / len(y)  # Signal energy\n",
+    "        features['energy'] = np.sum(y ** 2) / len(y)  \n",
     "        features['amplitude_mean'] = np.mean(np.abs(y))\n",
     "        features['amplitude_var'] = np.var(np.abs(y))\n",
     "\n",
@@ -458,7 +303,7 @@
     "        # Rhythmic Regularity\n",
     "        if len(beat_frames) > 1:\n",
     "            # Inter-Beat Interval (IBI) Variability\n",
-    "            ibi = np.diff(beat_frames) / sr  # Convert frame difference to seconds\n",
+    "            ibi = np.diff(beat_frames) / sr  \n",
     "            features['ibi_var'] = np.var(ibi)\n",
     "            features['ibi_mean'] = np.mean(ibi)\n",
     "\n",
@@ -488,12 +333,12 @@
     "        features['zcr_mean'] = np.mean(zcr)\n",
     "        features['zcr_var'] = np.var(zcr)\n",
     "\n",
-    "        # Onset Autocorrelation (Rhythmic Regularity)\n",
+    "        # Onset Autocorrelation \n",
     "        onset_acf = librosa.autocorrelate(librosa.onset.onset_strength(y=y, sr=sr), max_size=len(y)//2)\n",
     "        features['onset_acf_mean'] = np.mean(onset_acf)\n",
     "        features['onset_acf_var'] = np.var(onset_acf)\n",
     "\n",
-    "        # Statistics (Skewness and Kurtosis)\n",
+    "        # Skewness and Kurtosis\n",
     "        features['skewness'] = skew(y)\n",
     "        features['kurtosis'] = kurtosis(y)\n",
     "\n",
@@ -546,7 +391,10 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    folder_path = \"unlabeled\"\n",
-    "    process_audio_folder(folder_path, output_csv=\"audio_features_unlabeled.csv\")\n"
+    "    process_audio_folder(folder_path, output_csv=\"audio_features_unlabeled.csv\")\n",
+    "\n",
+    "    # Bron:\n",
+    "    # Feature extraction — librosa 0.11.0rc1 documentation. (z.d.). https://librosa.org/doc/main/feature.html\n"
    ]
   },
   {
